# OpenFaceTracking

./: CMakeLists.txt  README.md
cmake/: FindOpenFace.cmake
doc/utql/Vision/: OpenFaceTracking.xml
src/: FaceAnalyserInterop.h  FaceDetectorInterop.h  LandmarkDetectorInterop.h  OpenFaceTracking.cpp
